--- a/style.css
+++ b/style.css
@@ -509,9 +509,9 @@ ul li {
 }
 
 @media (max-width: 500px) {
-    nav {
+   nav {
         width: 100%;
-        padding: 1rem;
+        padding: 0rem;
         display: flex;
         flex-direction: row;
         justify-content: space-around;
@@ -519,23 +519,18 @@ ul li {
 
     .logo-container {
         display: flex;
-        width: 30%;
+        width: 40%;
+        padding: 0rem;
+        margin-top: 1rem;
 
     }
 
     .logo-container img {
         width: 100%;
         justify-content: start;
-        padding: 1rem;
+        padding: .5rem;
     }
-
-    .nav-list {
-        width: 70%;
-        display: flex;
-        flex-direction: row;
-        justify-content: space-around;
-    }
-
+  
     .nav-list ul {
         justify-content: space-between;
         width: 100%;
